--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -7,6 +7,11 @@
         <h5>Below you'll find a collection of short stories written by the NimbatColony team. These are made possible by our lovely subscribers on Patreon; Members of the Peon tier and above get access to some more risque stories, while more family friendly stories will be here for free.</h5>
     </mat-card-content>
     <mat-divider></mat-divider><br>
+    <h5><a routerLink="/choose-your-path">Choose Your Path</a></h5>
+    <h6><i>Image
+        “For the disinterested, career day at school is just a long, boring event that you've gotta go to. Could anything spark interest for this nimbat?”</i></h6>
+        Written on 10/8/2022, by Finn. This story is free for all.
+        <hr>
     <h5><a routerLink="/thou-have-yet-to-become-me">Thou Have Yet To Become Me</a></h5>
     <h6><i>“If the one that’s supposed to keep you safe can’t even be trusted, how do you go to sleep at night? How do you look at your world, imagining a thousand ways of how it’d all burn down when the veil was lifted. The best you can do for now is to keep everyone feeling hopeful, just like you were taught.”</i></h6>
         Written on 10/1/2022, by Frequency. This story is free for all.
