--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,7 +5,7 @@
                     src="assets/newcomer mark.png"></button>
         </div>
         <div class="col-11">
-            <h5 style="text-align:center">Our latest Colony Chronicle is now live! Check it out for free <a routerLink="thou-have-yet-to-become-me">here</a>!
+            <h5 style="text-align:center">Our latest Colony Chronicle is now live! Check it out for free <a routerLink="choose-your-path">here</a>!
             </h5>
         </div>
     </div>
