add word count and read estimate

--- a/src/app/colony-chronicles/choose-your-path/choose-your-path.component.html
+++ b/src/app/colony-chronicles/choose-your-path/choose-your-path.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>
             <h3>Choose Your Path</h3>
         </mat-card-title>
-        <mat-card-subtitle>Published on 10/8/22, written by Finn</mat-card-subtitle>
+        <mat-card-subtitle>Published on 10/8/22, written by Finn. (2051 words, ~10 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:justify;text-indent: 5%;" class="container">
             <h5>Graduation day was approaching rapidly, at least in the minds of the Colony’s secondary school seniors.
                 And, while he watched his fellow classmates work through their classes diligently, Pat couldn’t help but
