--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -11,13 +11,16 @@
     <h6><i>
         “For the disinterested, career day at school is just a long, boring event that you've gotta go to. Could anything spark interest for this nimbat?”</i></h6>
         Written on 10/8/2022, by Finn. This story is free for all.
+        (2051 words, ~10 minute read.)
         <hr>
     <h5><a routerLink="/thou-have-yet-to-become-me">Thou Have Yet To Become Me</a></h5>
     <h6><i>“If the one that’s supposed to keep you safe can’t even be trusted, how do you go to sleep at night? How do you look at your world, imagining a thousand ways of how it’d all burn down when the veil was lifted. The best you can do for now is to keep everyone feeling hopeful, just like you were taught.”</i></h6>
         Written on 10/1/2022, by Frequency. This story is free for all.
+        (5638 words, ~24 minute read.)
         <hr>
     <h5><a routerLink="/caught-up-in-your-wheeling-dealing">Caught Up In Your Wheeling-Dealing</a></h5>
     <h6><i>“After coming out of a long day’s worth of work in the Colony, you were approached by someone who seemed more than thankful to see you busting your butt for a good cause. Maybe she adored generous, hard-working people like herself. Or maybe she saw something on you that she wanted a taste of. A pairing between Anon and Rosmerta, the Proliferation Elder!”</i></h6>
         Written on 7/9/2022, by Frequency. This <b>18+ NSFW</b> story is free for all.
+        (6417 words, ~28 minute read.)
 </mat-card>
 </div>
