--- a/src/app/colony-chronicles/thou-have-yet-to-become-me/thou-have-yet-to-become-me.component.html
+++ b/src/app/colony-chronicles/thou-have-yet-to-become-me/thou-have-yet-to-become-me.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>
             <h3>Thou Have Yet To Become Me</h3>
         </mat-card-title>
-        <mat-card-subtitle>Published on 10/1/22, written by Frequency</mat-card-subtitle>
+        <mat-card-subtitle>Published on 10/1/22, written by Frequency. (5638 words, ~24 minute read.)</mat-card-subtitle>
         <mat-card-content style="text-align:justify;text-indent: 5%;" class="container">
 <h5>“I told you, you didn’t have to go and bust out the wine. This is a, ah…you know, a business-related expenditure, isn’t it?” Baron conjured up a sheepish smile at his companion for the day: a gray, purple-eyed member of his kind, clad in little more than a shoulder bag that supplied everything she’d wanted to bring for the occasion. A bottle of red wine was among one of the treats–along with a pair of accompanying glasses–but other goodies were nestled safely within the bag, including a few mustard buns from a village over a thousand miles from the Colony proper, and a couple of grapefruits. The arrivant began to bend her knees, sitting her shins atop of the red-and-white-checkered blanket that hosted the fiery red Nimbat that sat on the other side. Judging by the exchange of smiles, there’s some kind of unspoken yearning for familiarity and warmth between the two, simply two people trying to strike up a meaningful friendship by meeting outside their usual sects.</h5>
 
