--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
         <mat-card-content>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 30%; height: auto;;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/oathsworn mark bookends title.png">
+                    <img style="width: 35%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/devoted mark bookends title.png">
                 </div>
             </div>
             <div class="container">
@@ -58,32 +58,29 @@
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/devoted mark bookends title.png">
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row">
-                <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 12.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/loyal mark bookends title.png">
+                    <img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/loyal mark bookends title.png">
                 </div>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h6 style="text-align:center;">Sepa Ixen</h6>
+                        <h5 style="text-align:end;">Sepa Ixen</h5>
+                    </div>
+                    <div class="col">
+                        <h5 style="text-align:start;">Ermir</h5>
                     </div>
                 </div>
             </div>            
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 10%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/peon mark bookends title.png">
+                    <img style="width: 12.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/peon mark bookends title.png">
                 </div>
             </div>
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
-                    <img style="width: 7.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/avid mark bookends title.png">
+                    <img style="width: 7.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/visitant bookend.png">
                 </div>
             </div>
             <mat-divider></mat-divider>
