--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
         </mat-card-title>
         <mat-card-subtitle>
             <h5>These members of the community help us develop NimbatColony.info by donating to our <a
-                    class="light-link" href="">Patreon</a>! If you'd like a spot among them here, please consider
+                    class="light-link" href="https://www.patreon.com/nimbatcolony">Patreon</a>! If you'd like a spot among them here, please consider
                 supporting us!</h5>
         </mat-card-subtitle>
         <mat-card-content>
