fix some titles

--- a/src/app/proliferation/proliferation.component.html
+++ b/src/app/proliferation/proliferation.component.html
@@ -55,15 +55,15 @@
             <div class="row">
                 <div class="col">
                     <h4 style="text-align:center;">Hyacinth</h4>
-                    <h6 style="text-align:center;">Conservation Sect Leader</h6>
+                    <h6 style="text-align:center;">Copulation Sect Leader</h6>
                 </div>
                 <div class="col">
                     <h4 style="text-align:center;">Azalea</h4>
-                    <h6 style="text-align:center;">Infrastructure Sect Leader</h6>
+                    <h6 style="text-align:center;">Fertility Sect Leader</h6>
                 </div>
                 <div class="col">
                     <h4 style="text-align:center;">Mary</h4>
-                    <h6 style="text-align:center;">Agriculture Sect Leader</h6>
+                    <h6 style="text-align:center;">Midwifing Sect Leader</h6>
                 </div>
             </div>
         </div>
