--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -39,7 +39,7 @@
                     <div class="col">
                         <h5 style="text-align:center">Send a DM or @ to:</h5>
                         <h5 style="text-align:center"><a href="https://twitter.com/NimbatColony">@NimbatColony</a></h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/MurrchMadness">@MurrchMadness</a>
+                        <h5 style="text-align:center"><a href="https://twitter.com/PureOfHeartlin">@PureOfHeartlin</a>
                         </h5>
                         <h5 style="text-align:center"><a href="https://twitter.com/AmpFrequency">@AmpFrequency</a></h5>
                     </div>
@@ -80,7 +80,7 @@
                 <div class="col-5">
                     <h4 style="text-align:end">Finn Heartlin</h4>
                     <h6 style="text-align:end"><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fmurrchmadness&sa=D&sntz=1&usg=AOvVaw1QssskujCvtqDYNyT9jKTR">@MurrchMadness</a>
+                            href="https://twitter.com/PureOfHeartlin">@PureOfHeartlin</a>
                     </h6>
                     <h6 style="text-align:end">Lead Designer</h6>
                     <h5 style="text-align:end">Finn's a communications student based out of New England, </h5>
