--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -64,10 +64,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h5 style="text-align:end;">Sepa Ixen</h5>
+                        <h4 style="text-align:end;">Sepa Ixen</h4>
                     </div>
                     <div class="col">
-                        <h5 style="text-align:start;">Ermir</h5>
+                        <h4 style="text-align:center;">Ermir</h4>
+                    </div>
+                    <div class="col">
+                        <h4>Aurum</h4>
                     </div>
                 </div>
             </div>            
