--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,21 +4,16 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "./node_modules/bootstrap/scss/functions";
+@import "./node_modules/bootstrap/scss/variables";
+@import "./node_modules/bootstrap/scss/maps";
+@import "./node_modules/bootstrap/scss/mixins";
+@import "./node_modules/bootstrap/scss/utilities";
+@import "./node_modules/bootstrap/scss/helpers";
+@import "./node_modules/bootstrap/scss/utilities/api";
 @import "styles/variables";
 
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-
-@import "~bootstrap/scss/root";
-@import "~bootstrap/scss/reboot";
-
-@import "~bootstrap/scss/containers";
-@import "~bootstrap/scss/grid";
-
-@import "styles/variables";
-
-@import "~@angular/material/theming";
+@import "./node_modules/@angular/material/theming";
 
 @include mat-core();
 
