add new patron ♥

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,6 +72,9 @@
                     <div class="col">
                         <h4>Aurum</h4>
                     </div>
+                    <div class="col">
+                        <h4>MoonlightEV</h4>
+                    </div>
                 </div>
             </div>            
             <mat-divider></mat-divider>
