try the thing (bootstrap stop breaking pls)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,10 +70,10 @@
                         <h4 style="text-align:center;">Ermir</h4>
                     </div>
                     <div class="col">
-                        <h4>Aurum</h4>
+                        <h4 style="text-align:center;">Aurum</h4>
                     </div>
                     <div class="col">
-                        <h4>MoonlightEV</h4>
+                        <h4 style="text-align:start;">MoonlightEV</h4>
                     </div>
                 </div>
             </div>            
