--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-@import "./node_modules/bootstrap/scss/functions";
-@import "./node_modules/bootstrap/scss/variables";
-@import "./node_modules/bootstrap/scss/maps";
-@import "./node_modules/bootstrap/scss/mixins";
-@import "./node_modules/bootstrap/scss/utilities";
-@import "./node_modules/bootstrap/scss/helpers";
-@import "./node_modules/bootstrap/scss/utilities/api";
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/maps";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/helpers";
+@import "../node_modules/bootstrap/scss/utilities/api";
 @import "styles/variables";
 
-@import "./node_modules/@angular/material/theming";
+@import "../node_modules/@angular/material/theming";
 
 @include mat-core();
 
