make titles general

--- a/src/app/populace/populace.component.html
+++ b/src/app/populace/populace.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <mat-card>
-      <mat-card-title>Flight Populace</mat-card-title>
+      <mat-card-title><h3>Flight Populace</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/populace.png"></div>
@@ -13,7 +13,7 @@
     </mat-card>
     <br>
     <mat-card>
-      <mat-card-title>The Three Sects of Flight Populace</mat-card-title>
+      <mat-card-title><h3>The Three Sects of Flight Populace</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div class="container">
@@ -47,7 +47,7 @@
     </mat-card>
     <br>
     <mat-card>
-        <mat-card-title>Jena, Flight Populace Elder</mat-card-title>
+        <mat-card-title><h3>Jena, Flight Populace Elder</h3></mat-card-title>
         <mat-card-content>
         <h5 class="notes">
             "This Elder displays some of the “weakest” magical prowess in the Colony, but that is not to say it is without use. It’s just not evidently apparent, until you put two and two together. Simply put, Jena is an empath, and telepath. She has the ability to read minds to a simple degree, picking up thoughts that permeate through the mind, as well as emotions. The inhabitants say she can figure out an individual in a little under an hour. Jena uses all of this to cater to inhabitants, especially first-time Visitants. She leaves gifts, offers assuring words or advice, seemingly knowing just what to do or say to try and make you smile, or at least feel comfortable. With abilities and a golden heart like that, it’s easy to see why she represents Flight Populace."
