--- a/src/app/preservation/preservation.component.html
+++ b/src/app/preservation/preservation.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <mat-card>
-      <mat-card-title>Flight Preservation</mat-card-title>
+      <mat-card-title><h3>Flight Preservation</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/preservation.png"></div>
@@ -11,7 +11,7 @@
     </mat-card>
     <br>
     <mat-card>
-      <mat-card-title>The Three Sects of Flight Populace</mat-card-title>
+      <mat-card-title><h3>The Three Sects of Flight Populace</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div class="container">
@@ -45,7 +45,7 @@
     </mat-card>
     <br>
     <mat-card>
-        <mat-card-title>Katell, Flight Preservation Elder</mat-card-title>
+        <mat-card-title><h3>Katell, Flight Preservation Elder</h3></mat-card-title>
         <mat-card-content>
         <h5 class="notes">
             "Katell is by far the most adorable Nimbat Elder described to me. Short like a dumpling, and wearing a pair of big glasses, she’s defined as one of the more “studious” Nimbats in the Colony. Typically buries her nose into a book or a report. Apparently she holds a book club–oh, she’s just a nerdy thing! I hope this report doesn’t fall into her paws, I don’t mean to embarrass her. Even so, her demeanor isn’t by accident. Being an Elder Nimbat for Flight Preservation has put her straight into the more complicated aspects of the very integrity of the Colony, from its structures and systems to its resources. Shockingly, she has control over electricity, which she personally uses to fuel a number of processes, or shock someone that tries to bully her too much."
