--- a/src/app/progression/progression.component.html
+++ b/src/app/progression/progression.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <mat-card>
-      <mat-card-title>Flight Progression</mat-card-title>
+      <mat-card-title><h3>Flight Progression</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/progression.png"></div>
@@ -11,7 +11,7 @@
     </mat-card>
     <br>
     <mat-card>
-      <mat-card-title>The Three Sects of Flight Populace</mat-card-title>
+      <mat-card-title><h3>The Three Sects of Flight Populace</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div class="container">
@@ -42,7 +42,7 @@
     </mat-card>
     <br>
     <mat-card>
-        <mat-card-title>Brianna, Flight Progression Elder</mat-card-title>
+        <mat-card-title><h3>Brianna, Flight Progression Elder</h3></mat-card-title>
         <mat-card-content>
         <h5 class="notes">
             "The youngest of the Elders, albeit still quite old by human standards, Brianna is a curious and playful spirit. She’s much for conversation, but only if it means that she can potentially steal something shiny from your person if you aren’t paying attention—my own wrist watch got taken, and it took an hour to get it back! When Brianna isn’t being a little devil, she’s tinkering with some object, making interesting trinkets and toys. It’s likely she has some form of metallurgy in her magic capacity."        </h5>
