--- a/src/app/proliferation/proliferation.component.html
+++ b/src/app/proliferation/proliferation.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <mat-card>
-      <mat-card-title>Flight Proliferation</mat-card-title>
+      <mat-card-title><h3>Flight Proliferation</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/proliferation.png"></div>
@@ -11,7 +11,7 @@
     </mat-card>
     <br>
     <mat-card>
-      <mat-card-title>The Three Sects of Flight Proliferation</mat-card-title>
+      <mat-card-title><h3>The Three Sects of Flight Proliferation</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div class="container">
@@ -45,7 +45,7 @@
     </mat-card>
     <br>
     <mat-card>
-        <mat-card-title>Rosmerta, Flight Proliferation Elder</mat-card-title>
+        <mat-card-title><h3>Rosmerta, Flight Proliferation Elder</h3></mat-card-title>
         <mat-card-content>
         <h5 class="notes">
             "Rosmerta was a… fascinating meeting, to say the least. If I were to openly describe what sort of Nimbat she is, I’d say she is awfully motherly. In hindsight, I suppose that’s to be expected. Her magic seems to focus on fertility aspects, such as increasing stimulation through mere touch, among…other effects. Her entire demeanor isn’t completely focused on her Flight’s namesake, though. Rosmerta has said that she is into a few of the local sports in the Colony, such as a kind of activity that I can only describe as some kind of aerial volleyball. Others in the Colony have warned me not to cross those in her care. Apparently, underneath her honey-sweet exterior, is a fantastic display of power. Her true magic potential offers up a whole barrage of elemental power. Mothers have to be tough, I suppose."
