--- a/src/app/protection/protection.component.html
+++ b/src/app/protection/protection.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <mat-card>
-    <mat-card-title>Flight Protection</mat-card-title>
+    <mat-card-title><h3>Flight Protection</h3></mat-card-title>
     <mat-card-content>
     <h5>
       <div style="text-align:center"><img style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/protection.png"></div>
@@ -14,7 +14,7 @@
   </mat-card>
   <br>
   <mat-card>
-    <mat-card-title>The Three Sects of Flight Protection</mat-card-title>
+    <mat-card-title><h3>The Three Sects of Flight Protection</h3></mat-card-title>
     <mat-card-content>
     <h5>
       <div class="container">
@@ -56,7 +56,7 @@
   <br>
   
   <mat-card>
-    <mat-card-title>Eislyn, Flight Protection Elder</mat-card-title>
+    <mat-card-title><h3>Eislyn, Flight Protection Elder</h3></mat-card-title>
     <mat-card-content>
     <h5 class="notes">
       "Eislyn is apparently a master illusionist. So much so that even the inhabitants are not completely aware how much of the environment is fabricated. The only guaranteed illusions she deploys is a majority of the external field that hides the Colony, and the spectral clones that occasionally spawn in public spaces. She is described as a quiet, terse, but overall nice Nimbat. Some say that she is fond of sappy and romantic things, and horror stories as well. When she tells a tale, she deploys her illusions just to spice up the scenery. How terrifying! It’s a very good thing she loves the Colony she protects. I didn’t expect an illusionist to not be a trickster…"
