--- a/src/app/taxonomy/taxonomy.component.html
+++ b/src/app/taxonomy/taxonomy.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>Nimbat Taxonomy</mat-card-title>
+        <mat-card-title><h3>Nimbat Taxonomy</h3></mat-card-title>
         <mat-card-content>
             <h5>Nimbats are small, winged, felid-like creatures. They can grow to be anywhere between 1 to 4 feet tall,
                 from base of the foot to tip of the ear. Their wingspans are composed of a membranous tissue, similar to
