--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,6 +90,11 @@
                 </div>
             </div>
             <mat-divider></mat-divider>
+            <div class="row">
+                <div class="col">
+                    <h6 style="text-align:center;">Ares Tyler Lynx</h6>
+                </div>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
