--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,9 +50,6 @@
                     <div class="col">
                         <h4 style="text-align:center;">Rarelygood</h4>
                     </div>
-                    <div class="col">
-                        <h4>Artemis</h4>
-                    </div>
                 </div>
             </div>
             <mat-divider></mat-divider>
@@ -71,6 +68,9 @@
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Aurum</h4>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:center;">Artemis</h4>
                     </div>
                     <div class="col">
                         <h4 style="text-align:start;">MoonlightEV</h4>
