add a new story, 'year round'

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,7 +5,7 @@
                     src="assets/newcomer mark.png"></button>
         </div>
         <div class="col-11">
-            <h5 style="text-align:center">Our latest Colony Chronicle is now live! Check it out for free <a routerLink="choose-your-path">here</a>!
+            <h5 style="text-align:center">Our latest Colony Chronicle is now live! Read "Year Round", by Frequency <a routerLink="year-round">here</a>!
             </h5>
         </div>
     </div>
