--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -4,9 +4,15 @@
         <h3>Colony Chronicles</h3>
     </mat-card-title>
     <mat-card-content>
-        <h5>Below you'll find a collection of short stories written by the NimbatColony team. These are made possible by our lovely subscribers on Patreon; Members of the Peon tier and above get access to some more risque stories, while more family friendly stories will be here for free.</h5>
+        <h5>Below you'll find a collection of short stories written by the NimbatColony team. These are made possible by our lovely subscribers on Patreon; Members of the Visitant tier and above get access to some more risque stories, while more family friendly stories will be here for free.</h5>
     </mat-card-content>
     <mat-divider></mat-divider><br>
+    <h5><a routerLink="/year-round">Year Round</a></h5>
+    <h6><i>
+        “Filler, here!”</i></h6>
+        Written on 1/18/2023, by Frequency. This story is free for all.
+        (2051 words, ~10 minute read.)
+        <hr>
     <h5><a routerLink="/choose-your-path">Choose Your Path</a></h5>
     <h6><i>
         “For the disinterested, career day at school is just a long, boring event that you've gotta go to. Could anything spark interest for this nimbat?”</i></h6>
