--- a/src/app/colony-chronicles/colony-chronicles.component.html
+++ b/src/app/colony-chronicles/colony-chronicles.component.html
@@ -9,7 +9,7 @@
     <mat-divider></mat-divider><br>
     <h5><a routerLink="/year-round">Year Round</a></h5>
     <h6><i>
-        “Filler, here!”</i></h6>
+        “With the new year in the Colony having settled in, and everything returning to business as usual, it doesn't take long for one injustice to start things off terribly.”</i></h6>
         Written on 1/18/2023, by Frequency. This story is free for all.
         (2051 words, ~10 minute read.)
         <hr>
