--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,6 +70,12 @@
                         <h4 style="text-align:center;">Aurum</h4>
                     </div>
                     <div class="col">
+                        <h4 style="text-align:center;">Artemis</h4>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:center;">Glacialis</h4>
+                    </div>
+                    <div class="col">
                         <h4 style="text-align:start;">MoonlightEV</h4>
                     </div>
                 </div>
