--- a/src/app/preservation/preservation.component.html
+++ b/src/app/preservation/preservation.component.html
@@ -11,7 +11,7 @@
     </mat-card>
     <br>
     <mat-card>
-      <mat-card-title><h3>The Three Sects of Flight Populace</h3></mat-card-title>
+      <mat-card-title><h3>The Three Sects of Flight Preservation</h3></mat-card-title>
       <mat-card-content>
       <h5>
         <div class="container">
