--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h4 style="text-align:center;">Flintlocke</h4>
+                        <h4 style="text-align:center;">The Cat of Tens</h4>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Rarelygood</h4>
