--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,9 +47,6 @@
                     <div class="col">
                         <h4 style="text-align:center;">The Cat of Tens</h4>
                     </div>
-                    <div class="col">
-                        <h4 style="text-align:center;">Rarelygood</h4>
-                    </div>
                 </div>
             </div>
             <mat-divider></mat-divider>
@@ -65,9 +62,6 @@
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Ermir</h4>
-                    </div>
-                    <div class="col">
-                        <h4 style="text-align:center;">Aurum</h4>
                     </div>
                     <div class="col">
                         <h4 style="text-align:center;">Artemis</h4>
@@ -86,6 +80,13 @@
                     <img style="width: 12.5%; height: auto;margin-top: 15px;margin-bottom: 15px" src="assets/bookends/peon mark bookends title.png">
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h5 style="text-align:end;">GamerFox</h5>
+                    </div>
+                </div>
+            </div>        
             <mat-divider></mat-divider>
             <div class="row">
                 <div class="col-md-12 align-self-center" style="text-align:center">
@@ -96,6 +97,9 @@
             <div class="row">
                 <div class="col">
                     <h6 style="text-align:center;">Ares Tyler Lynx</h6>
+                </div>
+                <div class="col">
+                    <h6 style="text-align:center;">Ranger_Savage</h6>
                 </div>
             </div>
         </mat-card-content>
