--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
         <div class="col-sm-6">
             <h6 style="text-align:end"><small>Disclaimer: While some of these notes are canon to the world of Dust: an Elysian Tail, most are non-canon. </small></h6>
             <h6 style="text-align:end"><small>The Nimbat Colony logs are not created or endorsed by Dean Dodrill.</small></h6>
-            <h6 style="text-align:end"><small><a href="https://twitter.com/NimbatColony">Follow the development on Twitter!</a></small></h6>
+            <h6 style="text-align:end"><small><a href="https://bsky.app/profile/did:plc:nnaof7jc6fifqc3opcvg7s6u">Follow the development on Bluesky!</a></small></h6>
             <h6 style="text-align:end"><small><a routerLink="/usage-guidelines">Logos and Lore Usage Guidelines </a>- <a href="">Changelog</a></small></h6>
         </div>
     </div>
