--- a/src/app/colony-culture/colony-culture.component.html
+++ b/src/app/colony-culture/colony-culture.component.html
@@ -16,7 +16,7 @@
         </mat-card-title>
         <mat-card-content>
             <hr>
-            <div style="text-align:center"><img style="width: auto; height: auto;text-align:right;display: inline;vertical-align: top;" src="assets/media icon.png"></div>
+            <div style="text-align:center"><img style="width: 25%; height: 10%;text-align:right;display: inline;vertical-align: top;" src="assets/media icon.png"></div>
             <h6 style="text-align:center">Art by our very own Takeo!</h6>
             <h6 style="text-align:center">From top left, going clockwise: Rosmerta (Proliferation), Katell (Preservation), Brianna (Progression), Eislyn (Protection), and Jena (Populace)</h6>
             <hr>
