--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,12 +1,113 @@
-<div class="container-fluid update">
-    <div class="row">
-        <div class="col-1">
-            <button id="menu-button" mat-button (click)="toggleSidenav()"><img style="width: 40px; height: 100%"
-                    src="assets/newcomer mark.png"></button>
+<div>
+    <mat-toolbar [ngClass]="isSticky?'fixed':'not-fixed'" style="color: #d4b9b4; display: sticky">
+        <mat-toolbar-row style="background-color: #633d2c;">
+            <button routerLink="">
+                <img style="width: 60px; height: 100%" src="assets/newcomer mark.png"></button>
+            <span class="spacer"></span>
+            <button routerLink="colony-chronicles">
+                <h5 class="title-center">Colony Chronicles</h5>
+            </button>
+            <span class="spacer"></span>
+            <div appDebounceMouse (debounceMouseEnter)="isColonyCultureShowing = true" (mouseleave)="isColonyCultureShowing = false">
+                <div class="dropdown">
+                    <button routerLink="colony-culture">
+                        <h5 class="title-center">Colony Culture <mat-icon class="icon-display"
+                                *ngIf="!isColonyCultureShowing; else noCulture">
+                                keyboard_arrow_down</mat-icon><ng-template #noCulture>
+                                <mat-icon class="icon-display">keyboard_arrow_up</mat-icon>
+                            </ng-template></h5>
+                    </button>
+                    <div style="background-color: #633d2c;" class="dropdown-content-left container">
+                        <div class="row" routerLink="history-of-the-colony"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">History of the Colony</h5>
+                        </div>
+                        <div class="row" routerLink="visitants"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Visitants</h5>
+                        </div>
+                        <div class="row" routerLink="visitant-runes"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Visitant Runes</h5>
+                        </div>
+                        <div class="row" routerLink="proliferation"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Flight Proliferation</h5>
+                        </div>
+                        <div class="row" routerLink="protection"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Flight Protection</h5>
+                        </div>
+                        <div class="row" routerLink="preservation"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Flight Preservation</h5>
+                        </div>
+                        <div class="row" routerLink="populace"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Flight Populace</h5>
+                        </div>
+                        <div class="row" routerLink="progression"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Flight Progression</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <span class="spacer-center"></span>
+            <button routerLink="magical-capabilities">
+                <h5 class="title-center">Magical Capabilities</h5>
+            </button>
+            <span class="spacer"></span>
+            <div appDebounceMouse (debounceMouseEnter)="isLifeShowing = true" (mouseleave)="isLifeShowing = false">
+                <div class="dropdown">
+                    <button routerLink="colony-culture">
+                        <h5 class="title-center">Colony Life <mat-icon class="icon-display"
+                                *ngIf="!isLifeShowing; else noLife">
+                                keyboard_arrow_down</mat-icon><ng-template #noLife>
+                                <mat-icon class="icon-display">keyboard_arrow_up</mat-icon>
+                            </ng-template></h5>
+                    </button>
+                    <div style="background-color: #633d2c;" class="dropdown-content-right container">
+                        <div class="row" routerLink="taxonomy"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Nimbat Taxonomy</h5>
+                        </div>
+                        <div class="row" routerLink="notable-nimbats"><mat-divider></mat-divider>
+                            <h5 style="text-align:center">Notable Nimbats</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <span class="spacer-center"></span>
+            <button routerLink="curious-battes">
+                <h5 class="title-center">CuriousBattes</h5>
+            </button>
+            <span class="spacer"></span>
+        </mat-toolbar-row>
+        <mat-toolbar-row style="background-color: #ed2d47;">
+            <div class="col-12">
+                <h5 style="text-align:center">Our latest Colony Chronicle is now live! Read "Year Round", by
+                    Frequency <a routerLink="year-round">here</a>!
+                </h5>
+            </div>
+        </mat-toolbar-row>
+    </mat-toolbar>
+</div>
+<div style="background-color: #e6b8a2; color: #633d2c; padding-top: 1%">
+    <div style="min-height: 75vh"><router-outlet></router-outlet></div>
+    <footer class="container-fluid" style="background-color: #ddab92">
+        <div class="row">
+            <div class="col-sm-6">
+                <h6><small>The Nimbat species design is copyright Dean Dodrill, and originate from Dust: An Elysian
+                        Tail. <a href="https://store.steampowered.com/app/236090/Dust_An_Elysian_Tail/">Go play it</a>,
+                        if you haven't!</small></h6>
+                <h6><small>The Flight Symbols, Visitant Runes, and the non-canon contents of this website were designed
+                        and made by the
+                        NimbatColony.info team. <b>Please do not use without permission.</b></small></h6>
+            </div>
+            <div class="col-sm-6">
+                <h6 style="text-align:end"><small>Disclaimer: While some of these notes are canon to the world of Dust:
+                        an Elysian Tail, most are non-canon. </small></h6>
+                <h6 style="text-align:end"><small>The Nimbat Colony logs are not created or endorsed by Dean
+                        Dodrill.</small></h6>
+                <h6 style="text-align:end"><small><a
+                            href="https://bsky.app/profile/did:plc:nnaof7jc6fifqc3opcvg7s6u">Follow
+                            the development on
+                            Bluesky!</a></small></h6>
+                <h6 style="text-align:end"><small><a routerLink="/usage-guidelines">Logos and Lore Usage Guidelines
+                        </a>- <a href="">Changelog</a></small></h6>
+            </div>
         </div>
-        <div class="col-11">
-            <h5 style="text-align:center">Our latest Colony Chronicle is now live! Read "Year Round", by Frequency <a routerLink="year-round">here</a>!
-            </h5>
-        </div>
-    </div>
+    </footer>
 </div>
