--- a/src/app/notable-nimbats/notable-nimbats.component.html
+++ b/src/app/notable-nimbats/notable-nimbats.component.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col">
                         <h4 style="text-align:left;">Frequency</h4>
-                        <h6 style="text-align:left;" class="notes">"Frequency is one of the larger Nimbats in the Colony, sporting around 3.5 to 4 feet. She’s jovial, playful, and loud. She has played attendee for Visitants before, although she isn’t a true Advocate as of yet, given that she often travels out of the Colony to tend to other things. She is one of the most enigmatic Nimbats described to me, apparently having been born outside of the Colony. Her actual history is not spoken of.”</h6>
+                        <h6 style="text-align:left;" class="notes">"Frequency is one of the larger Nimbats in the Colony, sporting around the smaller half of 3 feet and some change. She’s jovial, playful, and loud. She has played attendee for Visitants before, although she isn’t a true Advocate as of yet, given that she often travels out of the Colony to tend to other things. She is one of the most enigmatic Nimbats described to me, apparently having been born outside of the Colony. Her actual history is not spoken of.”</h6>
                         <h6 style="text-align:left">Current Flight: Protection</h6>
                         <h6 style="text-align:left">Magic Prowess: Hyper-acoustic emission.</h6>
                         <h6 style="text-align:left">Age: 25</h6>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col">                        
                         <h4 style="text-align:left;">Wavelength</h4>
-                        <h6 style="text-align:left;" class="notes">“Wavelength appears to be almost entirely like his ‘predecessor’ Frequency: nearing 4 feet tall with an uncommonly trained physique. According to his personal account, a freak confluence of transformative magic forever changed him from a heroic musketeer equine into this newfound Nimbat life. He seems to have spent a lot of time outside of the Colony after that chance encounter to find himself again and has since settled on making the best of this newfound opportunity. Relying on his training and newfound powers, he has recently sworn to be one of the Colony’s resolute shields to defend those that he loves.”</h6>
+                        <h6 style="text-align:left;" class="notes">“Wavelength appears to be almost entirely like his ‘predecessor’ Frequency: nearing 3 feet tall with some change with an uncommonly trained physique. According to his personal account, a freak confluence of transformative magic forever changed him from a heroic musketeer equine into this newfound Nimbat life. He seems to have spent a lot of time outside of the Colony after that chance encounter to find himself again and has since settled on making the best of this newfound opportunity. Relying on his training and newfound powers, the peachy lad has recently sworn to be one of the Colony’s resolute shields to defend those that he loves.”</h6>
                         <h6 style="text-align:left">Current Flight: Protection</h6>
                         <h6 style="text-align:left">Magic Prowess: Augmentative performance sonomancy, weapon conjuration.</h6>
                         <h6 style="text-align:left">Age: 25</h6>
